--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "staticbook",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "private": true,
   "scripts": {
     "dev": "astro dev",
@@ -14,6 +14,7 @@
     "sass": "^1.53.0"
   },
   "dependencies": {
-    "alpinejs": "^3.10.2"
+    "alpinejs": "^3.10.2",
+    "jspdf": "^2.5.1"
   }
 }
